main page overflow fix

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -66,6 +66,8 @@ h3.h3
     padding-bottom: 20px
   +r(550)
     padding-top: 40px
+  .container
+    overflow: hidden
 .products-wrapper
   display: flex
   flex-wrap: wrap
